Copyright (C) 2022 LANNOCC (Shawn A. Wilson)
@%@~LICENSE:MIT~@%@

saw_070922_2 - Remove Python-3.8 syntax magic so we can run on 3.7 (raspbian).

saw_070922_1 - Move database "name" constants into their own file.

saw_070822_2 - Make sure we don't create db unless we start a node master.

saw_070822_1 - Implement ListLabels, LabelsList, LabelInterest, and LabelIgnore.

saw_070722_1 - Peers are now able to sign on to the nodes.

saw_070622_3 - Implement re-registration. Fix a security concern for
               registration... this will invalidate existing signed entries.
               Implement proper signature verification on nodes.

saw_070622_2 - Fix error with register command.

saw_070622_1 - Much work implementiong node protocol v2 and proper node-based
               registration.

saw_062622_1 - Implementation of peer protocol v1 (basic) and v2 (encrypted).

saw_061722_1 - Beginning crypto handler v1 (label registration).

saw_061622_1 - Beginning node protocol v1 (ping-pong).

saw_061422_3 - Use os.makedirs() for the user_data_dir (creates parents).

saw_061422_2 - Now have a simple `lank` command.

saw_061422_1 - Initial commit (barebones pip project skeleton).
